maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:57: error: missing argument list for method getIndication in class ShortestPathMaze
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `getIndication _` or `getIndication(_,_)` instead of `getIndication`.
      if (getIndication != NO_INDICATION) {
          ^